uplifted the gradle stuffs